--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Ladidh"
         tools:targetApi="31">
         <activity
+            android:name=".updateInfo"
+            android:exported="false" />
+        <activity
+            android:name=".myOrders"
+            android:exported="false" />
+        <activity
             android:name=".offers"
             android:exported="false" />
         <activity
